# component-airtable

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  change_log.md  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: component.py  csv_tools.py  transformation.py
tests/: test_component.py
